delete unused blog entries, update 01-01 and 01-02 with link to github

--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Using MDX'
-description: 'Lorem ipsum dolor sit amet'
+title: 'Using MDX - from Astro'
+description: 'MDX is a special flavor of Markdown that supports embedded JavaScript & JSX syntax. - Content comes from the original blog template'
 pubDate: 'Jul 02 2022'
 heroImage: '/blog-placeholder-5.jpg'
 ---
